After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 722089 - encoder: h264: fix frame cropping rectangle
encoder: h264: fix frame cropping rectangle
Status: RESOLVED FIXED
Product: gstreamer-vaapi
Classification: Other
Component: general
git master
Other Linux
: Normal normal
: ---
Assigned To: gstreamer-vaapi maintainer(s)
gstreamer-vaapi maintainer(s)
Depends on:
Blocks: 719412
 
 
Reported: 2014-01-13 09:02 UTC by Gwenole Beauchesne
Modified: 2014-01-13 16:41 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Gwenole Beauchesne 2014-01-13 09:02:11 UTC
The frame cropping rectangle is not set accordingly when the width is not a multiple of 16 pixels. i.e. only the vertical resolution is correctly handled.
Comment 1 Gwenole Beauchesne 2014-01-13 12:41:45 UTC
Well, actually, the vertical resolution is not correctly handled either, even for progressive sequences.
Comment 2 Gwenole Beauchesne 2014-01-13 16:41:45 UTC
commit 78bf2c01ccaf716da2179cb15f3438f1d544f12c
Author: Gwenole Beauchesne <gwenole.beauchesne@intel.com>
Date:   Mon Jan 13 13:41:35 2014 +0100

    encoder: h264: fix frame cropping rectangle calculation.
    
    Fix frame cropping rectangle calculation to handle horizontal resolutions
    that don't match a multiple of 16 pixels, but also the vertical resolution
    that was incorrectly computed for progressive sequences too.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=722089